Fix image not showing after deployement

--- a/styles.css
+++ b/styles.css
@@ -200,31 +200,31 @@ li {
 }
 
 .img-one {
-  background-image: url("/images/portfolio/card-one.png");
+  background: url(/images/portfolio/card-one.svg) no-repeat;
 }
 
 .img-two {
-  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("/images/portfolio/card-two.png");
+  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url(/images/portfolio/card-two.svg);
 }
 
 .img-three {
-  background: url("/images/portfolio/card-three.png");
+  background: url(/images/portfolio/card-three.svg) no-repeat;
 }
 
 .img-four {
-  background-image: url("/images/portfolio/card-four.png");
+  background: url(/images/portfolio/card-four.svg) no-repeat;
 }
 
 .img-five {
-  background-image: url("/images/portfolio/card-five.png");
+  background: url(/images/portfolio/card-five.svg) no-repeat;
 }
 
 .img-six {
-  background-image: url("/images/portfolio/card-six.png");
+  background: url(/images/portfolio/card-six.svg) no-repeat;
 }
 
 .img-seven {
-  background-image: url("/images/portfolio/card-seven.png");
+  background: url(/images/portfolio/card-seven.svg) no-repeat;
 }
 
 .card-hedaing {
